bootstrap/cluster-resources/in-cluster/codefreshnew-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: codefreshnew
spec: {}
status: {}
