bootstrap/cluster-resources/in-cluster/codefreshoct7-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: codefreshoct7
spec: {}
status: {}
