bootstrap/cluster-resources/in-cluster/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: master
  creationTimestamp: null
  name: codefreshnew-master
  namespace: codefreshnew
spec:
  ingressClassName: nginx
  rules:
  - host: 43.205.107.246.nip.io
status:
  loadBalancer: {}
